--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>عملة اليوم | أسعار العملات</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -57,7 +58,6 @@
       margin: 40px auto;
       max-width: 320px;
       min-height: 100px;
-      background: #ddd;
       border-radius: 12px;
       line-height: 100px;
       color: #666;
@@ -65,6 +65,10 @@
       user-select: none;
     }
   </style>
+
+  <!-- كود تحميل مكتبة Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9862396615520760" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -92,7 +96,18 @@
     <canvas id="priceChart"></canvas>
   </div>
 
-  <div class="ad-container">مكان إعلان Google AdSense</div>
+  <!-- مكان إعلان Google AdSense -->
+  <div class="ad-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9862396615520760"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
 
   <!-- مكتبة Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
